Ajusted layout issues and classification parameters.

--- a/KeepCalm Chrome Extension/css/style.less
+++ b/KeepCalm Chrome Extension/css/style.less
@@ -13,14 +13,14 @@ body {
     margin-left: 15px;
 }
 
-img.logo{
+img.logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 250px;
 }
 
-h3, h4, h5 {
+p, h3, h4, h5 {
     text-align: center;
 }
 
@@ -56,7 +56,17 @@ section#keepcalm-content {
             font-weight: 200;
         }
 
+        p {
+            font-size: 10pt;
+        }
+
         .feedback {
+            .center {
+                display: table;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
             .feedback-btn {
                 color: white;
                 font-weight: 700;
